# benchmarks

./: .gitmodules  CMakeLists.txt  cmake.sh
include/: btree.h  helpers.hpp  sorted_deque.hpp  tdc_trie.hpp
include/sti/: stree.h
src/: CMakeLists.txt  dynamic-cast.cpp  read-whole-file.cpp  set.cpp  string-compare.cpp  string-to-double.cpp  string-to-int.cpp  vector-realloc.cpp
